fix promo block on tablet and mobile

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -118,8 +118,10 @@
       height: 100%;
       background-color: rgba(0, 0, 0, 0.9);
       overflow: auto;
-      padding: 170px 30px 30px 30px;
+      padding: 0 30px 30px 30px;
       transition: left 0.3s ease 0s;
+      row-gap: 20px;
+      font-size: 20px;
 
       &._active {
         left: 0;
@@ -168,61 +170,6 @@
       @include respond-above(md) {
         font-size: 18px;
       }
-
-      @include respond-below(sm) {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          margin-top: 20px;
-          position: fixed;
-          top: 0;
-          left: -100%;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(0, 0, 0, 0.9);
-          overflow: auto;
-          padding: 170px 30px 30px 30px;
-          transition: left 0.3s ease 0s;
-
-         &._active {
-            left: 0;
-         }
-
-          &::before {
-              content: "";
-              position: fixed;
-              width: 100%;
-              top: 0;
-              left: 0;
-              height: 70px;
-              background-color: $black;
-              z-index: 7;
-          }
-      }
-  
-      a {
-          margin-right: 20px;
-          text-decoration: none;
-          color: $white;
-          font-weight: 400;
-          line-height: 23px;
-          transition: $transition-duration;
-          z-index: 5;
-
-          @include respond-above(md) {
-            font-size: 18px;
-          } 
-          
-          @include respond-below(sm) {
-              flex-wrap: wrap;
-              margin: 0px 0px 15px 0px;
-              font-size: 24px;
-          }
-
-          &:hover {
-              border-bottom: 2px solid $green;
-          }
-      }
-  }  
-}       
-  
+    }
+  }
+}
