--- a/src/scss/about_us.scss
+++ b/src/scss/about_us.scss
@@ -28,7 +28,7 @@
 .about-us {
   position: relative;
   z-index: 2;
-  padding-top: 75px;
+  // padding-top: 75px;
   backdrop-filter: blur(2px);
 
   a {
